<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/register_bg">

    <!--  <include layout="@layout/title_bar" />-->
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:orientation="horizontal" 
    android:background="#00bfff">
   
    <Button
        android:id="@+id/btn_title_left"
        android:layout_marginRight="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top_left_button"
        android:text="@string/back"
        android:layout_marginLeft="7dp"
        android:lines="1"
        android:textSize="12sp"
        android:textColor="#ffffffff"
        android:gravity="center_vertical"
        android:onClick="goBack"/>

     <TextView 
        android:id="@+id/tv_top_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textSize="19sp"
        android:textColor="#ffffffff"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/image_findme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ibeacon_app"
        android:layout_marginTop="30dp"/>

     <TextView 
        android:id="@+id/logo_text"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:layout_gravity="center"
        android:lines="1"
        android:textColor="#ffffff"
        android:textSize="19sp"/>
     <TextView 
        android:id="@+id/version"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center"
        android:lines="1"
        android:textSize="19sp"/>
      <TextView 
        android:id="@+id/version_1"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/copyright"
        android:gravity="center"
        android:lines="1"
        android:textSize="19sp"/>

</LinearLayout>