<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#e8f0f0">

    <!--  <include layout="@layout/title_bar" />-->
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:orientation="horizontal" 
    android:background="@drawable/login_bg">
   
    <Button
        android:id="@+id/btn_title_left"
        android:layout_marginRight="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top_left_button"
        android:text="@string/back"
        android:layout_marginLeft="7px"
        android:lines="1"
        android:textSize="12sp"
        android:textColor="#ffffffff"
        android:gravity="center_vertical"
        android:onClick="goBack"
        />
     <TextView 
        android:id="@+id/tv_top_title"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/changepwd"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:lines="1"
        android:textSize="19sp"
        android:textColor="#ffffffff"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:orientation="vertical">

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp" 
                android:background="@drawable/prefresh_list_cutline"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="vertical"
                android:background="@drawable/input"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <View
	                android:layout_width="fill_parent"
	                android:layout_height="1dp" 
	                android:background="@drawable/prefresh_list_cutline"/>

                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/account_text" 
                        android:textSize="19sp" 
                        android:textColor="#000000"/>

                     <EditText 
                        android:id="@+id/uid_edt" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="20dp" 
                        android:hint="@string/account_hint"
                        android:background="@null" 
                        android:textSize="17sp"/>
                </LinearLayout>

                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/oldpwd" 
                        android:textSize="19sp" 
                        android:textColor="#000000"/>

                    <EditText 
                        android:id="@+id/oldpassword" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="20dp" 
                        android:hint="@string/oldpwd_hint"
                        android:background="@null" 
                        android:textSize="17sp"/>
                </LinearLayout>

                <View
	                android:layout_width="fill_parent"
	                android:layout_height="1dp" 
	                android:background="@drawable/prefresh_list_cutline"/>

                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">
                    <TextView 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/newpwd" 
                        android:textSize="19sp" 
                        android:textColor="#000000"/>

                     <EditText 
                        android:id="@+id/newpassword" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="20dp" 
                        android:hint="@string/newpwd_hint"
                        android:background="@null" 
                        android:textSize="17sp"/>
                </LinearLayout>

                <View 
                    android:layout_height="1dp" 
                    android:layout_width="fill_parent" 
                    android:background="@drawable/prefresh_list_cutline"/>
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                    <TextView 
                        android:layout_width="wrap_content" 
                        android:layout_height="wrap_content" 
                        android:text="@string/confirm_newpwd" 
                        android:textSize="19sp" 
                        android:textColor="#000000"/>

                    <EditText android:id="@+id/confrim_newpassword" 
                        android:layout_width="fill_parent" 
                        android:layout_height="wrap_content" 
                        android:layout_marginLeft="20dp" 
                        android:hint="@string/newpwd_hint"
                        android:background="@null" 
                        android:textSize="17sp"
                        android:singleLine="true"
						android:inputType="textPassword"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/register_button_select"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:textSize="19sp"
                android:text="@string/submit" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>

