<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:background="@drawable/background_login_div_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/message_layout"
        style="@style/main_bottom_bar_linear" >
        
        <ImageView
            android:id="@+id/message_image"
            style="@style/main_bottom_bar_image" />

        <TextView
            android:id="@+id/message_text"
            android:visibility="gone"
            style="@style/main_bottom_bar_text"
            android:text="@string/me_menu" />
    </LinearLayout>

   <LinearLayout
        android:id="@+id/contacts_layout"
        style="@style/main_bottom_bar_linear" >
        
        <ImageView
            android:id="@+id/contacts_image"
            style="@style/main_bottom_bar_image" />

        <TextView
            android:id="@+id/contacts_text"
            android:visibility="gone"
            style="@style/main_bottom_bar_text"
            android:text="@string/contact_menu" />
    </LinearLayout>
<!--  
    <LinearLayout
        android:id="@+id/news_layout"
        style="@style/main_bottom_bar_linear" >

        <ImageView
            android:id="@+id/news_image"
            style="@style/main_bottom_bar_image" />

        <TextView
            android:id="@+id/news_text"
            style="@style/main_bottom_bar_text"
            android:text="个人信息" />
    </LinearLayout>
-->
   <LinearLayout
        android:id="@+id/setting_layout"
        style="@style/main_bottom_bar_linear" >
        
        <ImageView
            android:id="@+id/setting_image"
            style="@style/main_bottom_bar_image" />

        <TextView
            android:id="@+id/setting_text"
            android:visibility="gone"
            style="@style/main_bottom_bar_text"
            android:text="@string/more_menu" />
    </LinearLayout>

</LinearLayout>